chore: SecurityConfig 파일에 배용 서버에 접근할 수 있도록 허용